...
  const HomeScreen({
    Key? key,
    required this.firstButtonPressed,
    required this.secondButtonPressed,
    required this.onItemTapped,
    required this.selectedIndex,
  }) : super(key: const Key("HomePage"));

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        backgroundColor: utilities.secondaryColor,
...
              const CustomButtonsHome(),
            ],
          ),
        ),
      ),
      bottomNavigationBar: CustomNavBar(
        key: const Key("NavBarHome"),
        selectedIndex: selectedIndex,
        onItemTapped: onItemTapped,
      ),
    );
  }
}
...
